@@ -1,7 +1,7 @@
 
 setupATLAS # or equivalent on your machine
 lsetup rcsetup # needed for pandaAttack with existing setupATLAS env
-rcSetup Base,2.4.9
+rcSetup Base,2.4.11
 
 ## the code for ZeroLeptonRun2 is at
 ## svn+ssh://svn.cern.ch/reps/atlasoff/PhysicsAnalysis/SUSYPhys/Factory/ZeroLeptonRun2
@@ -11,14 +11,13 @@ rc checkout_pkg atlasoff/PhysicsAnalysis/SUSYPhys/Factory/ZeroLeptonRun2/trunk
 #rc checkout_pkg atlasoff/PhysicsAnalysis/SUSYPhys/Factory/ZeroLeptonRun2/tags/ZeroLeptonRun2-00-01-03
 
 ## additional packages needed (SUSYTools now part of AnalysisBase
-rc checkout_pkg atlasoff/PhysicsAnalysis/SUSYPhys/SUSYTools/tags/SUSYTools-00-07-60
+rc checkout_pkg atlasoff/PhysicsAnalysis/SUSYPhys/SUSYTools/tags/SUSYTools-00-07-70
 rc checkout_pkg atlasoff/PhysicsAnalysis/SUSYPhys/Factory/cafe/tags/cafe-00-00-10
 rc checkout_pkg atlasoff/PhysicsAnalysis/SUSYPhys/JetSmearing/tags/JetSmearing-01-00-18
 git clone https://github.com/lawrenceleejr/Ext_RestFrames.git; cd Ext_RestFrames; git checkout v1.6; cd -;
 git clone https://github.com/kratsg/xAODJetReclustering.git
 
 rc checkout $ROOTCOREBIN/../SUSYTools/doc/packages.txt
-
 
 # compile
 rc find_packages
