@@ -31,6 +31,7 @@ MuonCosmic.d0: 0.2
 BadMuon.qoverp: 0.2
 #
 PhotonBaseline.Pt: 25000.
+PhotonBaseline.Id: Loose
 #
 #
 Photon.Pt: 130000.
@@ -62,7 +63,7 @@ Btag.enable: true
 #
 Btag.Tagger: MV2c10
 Btag.WP: FixedCutBEff_77
-Btag.CalibPath: xAODBTaggingEfficiency/13TeV/2016-20_7-13TeV-MC15-CDI-May12_v1.root
+Btag.CalibPath: xAODBTaggingEfficiency/13TeV/2016-20_7-13TeV-MC15-CDI-May31_v1.root
 #
 # set the -999. to positive number to override default
 OR.DoBoostedElectron: false
